# ComputerGraphics

GPS_lab02/GPS_lab02/: CMakeLists.txt  Camera.cpp  Camera.hpp  Mesh.cpp  Mesh.hpp  Model3D.cpp  Model3D.hpp  OpenGL_4_Application_VS2015.cpp  Shader.cpp  Shader.hpp  SkyBox.hpp
GPS_lab02/GPS_lab02/objects/army/: Thumbs.db  Tools.tga  army1.mtl  cubus_faun_912_21.mtl  cubus_faun_912_21a.3ds  cubus_faun_912_21a.ms3d  cubus_faun_912_21a.mtl  cubus_faun_912_21b.3ds  cubus_faun_912_21b.ms3d  cubus_faun_912_21b.mtl  cubus_faun_912_21c.3ds  cubus_faun_912_21c.X  cubus_faun_912_21c.b3d  cubus_faun_912_21c.ms3d  cubus_faun_912_21c.mtl  cubus_faun_912_21d.3ds  cubus_faun_912_21d.X  cubus_faun_912_21d.b3d  cubus_faun_912_21d.ms3d  cubus_faun_912_21d.mtl  cubus_faun_912_21e.3ds  cubus_faun_912_21e.ms3d  cubus_faun_912_21e.mtl
GPS_lab02/GPS_lab02/objects/army/screens/: Thumbs.db
GPS_lab02/GPS_lab02/objects/monster/: Umber_Hulk_1.mtl  monster.blend
GPS_lab02/GPS_lab02/objects/muhammer/: Muhammer.mtl
GPS_lab02/GPS_lab02/objects/psyduck/: psyduck.mtl
GPS_lab02/GPS_lab02/objects/rotatePlane/: saber.mtl
GPS_lab02/GPS_lab02/objects/saveAircraft/: Seahawk.mtl
GPS_lab02/GPS_lab02/objects/scifiCity/scifiCity/: scifiCity.mtl
GPS_lab02/GPS_lab02/objects/spacecraftBad1/: aircraftBad.mtl
GPS_lab02/GPS_lab02/objects/truck/: Thumbs.db  Window.tga  cubus_faun_908-54VA.3ds  cubus_faun_908-54VA.RAY  cubus_faun_908-54VA.ms3d  cubus_faun_908_54_clayrender.max  cubus_faun_908_54_clayrender_textur.max  truck.mtl
GPS_lab02/GPS_lab02/shaders/: shaderStart.frag
(+8 files in other folders)
